--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,8 +3,9 @@ version: '3.8'
 services:
   c-dev:
     build: .
+    container_name: c-lang
     volumes:
-      - ./src:/app
+      - ../src:/app
     working_dir: /app
     tty: true
     command: sleep infinity
