--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:bullseye
 
 RUN apt-get update && \
-    apt-get install -y gcc make gdb vim python3 python3-pip && \
+    apt-get install -y gcc git make gdb vim python3 python3-pip && \
     apt-get clean
 
 COPY requirements.txt /tmp/requirements.txt
