--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   c-dev:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: c-lang
     volumes:
       - ../src:/app
