--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - ../src:/app
     working_dir: /app
     tty: true
-    command: sleep infinity
+    command: sh -c "chmod +x ./run.sh && sleep infinity"
