--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: c-lang
     volumes:
-      - ../src:/app
+      - ..:/app
     working_dir: /app
     tty: true
-    command: sh -c "chmod +x ./run.sh && sleep infinity"
+    command: sh -c "chmod +x ./src/run.sh && sleep infinity"
